// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ts#rdb smithy-connection generator > should add rdb dev dependency to smithy backend dev 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "api",
  "root": "packages/api",
  "targets": {
    "dev": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "dev",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;

exports[`ts#rdb smithy-connection generator > should be idempotent across context.ts, handler.ts, and local-server.ts 1`] = `
"import { getPrisma as getDb } from 'db';
import { Logger } from '@aws-lambda-powertools/logger';
import { Metrics } from '@aws-lambda-powertools/metrics';
import { Tracer } from '@aws-lambda-powertools/tracer';

export interface ServiceContext {
  tracer: Tracer;
  logger: Logger;
  metrics: Metrics;
  db: Awaited<ReturnType<typeof getDb>>;
}
"
`;

exports[`ts#rdb smithy-connection generator > should be idempotent across context.ts, handler.ts, and local-server.ts 2`] = `
"import { getPrisma as getDb } from 'db';
import {
  convertEvent,
  convertVersion1Response,
} from '@aws-smithy/server-apigateway';
import type { APIGatewayProxyEvent, APIGatewayProxyResult } from 'aws-lambda';
import { Tracer } from '@aws-lambda-powertools/tracer';
import { Logger } from '@aws-lambda-powertools/logger';
import { Metrics } from '@aws-lambda-powertools/metrics';
import { Service } from './service.js';
import { getMyApiServiceHandler } from './generated/ssdk/index.js';

const tracer = new Tracer();
const logger = new Logger();
const metrics = new Metrics();

const serviceHandler = getMyApiServiceHandler(Service);

export const lambdaHandler = async (
  event: APIGatewayProxyEvent,
): Promise<APIGatewayProxyResult> => {
  const httpRequest = convertEvent(event);
  const db = await getDb();
  const httpResponse = await serviceHandler.handle(httpRequest, {
    tracer,
    logger,
    metrics,
    db,
  });
  return convertVersion1Response(httpResponse);
};
"
`;

exports[`ts#rdb smithy-connection generator > should be idempotent across context.ts, handler.ts, and local-server.ts 3`] = `
"import { getPrisma as getDb } from 'db';
import { IncomingMessage, ServerResponse, createServer } from 'http';
import { convertRequest, writeResponse } from '@aws-smithy/server-node';
import { Tracer } from '@aws-lambda-powertools/tracer';
import { Logger } from '@aws-lambda-powertools/logger';
import { Metrics } from '@aws-lambda-powertools/metrics';
import { Service } from './service.js';
import { getMyApiServiceHandler } from './generated/ssdk/index.js';

const tracer = new Tracer();
const logger = new Logger();
const metrics = new Metrics();

const serviceHandler = getMyApiServiceHandler(Service);

const server = createServer(async function (
  req: IncomingMessage,
  res: ServerResponse<IncomingMessage> & { req: IncomingMessage },
) {
  const httpRequest = convertRequest(req);
  const db = await getDb();
  const httpResponse = await serviceHandler.handle(httpRequest, {
    tracer,
    logger,
    metrics,
    db,
  });
  return writeResponse(httpResponse, res);
});

server.listen(3000);
"
`;

exports[`ts#rdb smithy-connection generator > should inject into context.ts, handler.ts, and local-server.ts 1`] = `
"import { getPrisma as getDb } from 'db';
import { Logger } from '@aws-lambda-powertools/logger';
import { Metrics } from '@aws-lambda-powertools/metrics';
import { Tracer } from '@aws-lambda-powertools/tracer';

export interface ServiceContext {
  tracer: Tracer;
  logger: Logger;
  metrics: Metrics;
  db: Awaited<ReturnType<typeof getDb>>;
}
"
`;

exports[`ts#rdb smithy-connection generator > should inject into context.ts, handler.ts, and local-server.ts 2`] = `
"import { getPrisma as getDb } from 'db';
import {
  convertEvent,
  convertVersion1Response,
} from '@aws-smithy/server-apigateway';
import type { APIGatewayProxyEvent, APIGatewayProxyResult } from 'aws-lambda';
import { Tracer } from '@aws-lambda-powertools/tracer';
import { Logger } from '@aws-lambda-powertools/logger';
import { Metrics } from '@aws-lambda-powertools/metrics';
import { Service } from './service.js';
import { getMyApiServiceHandler } from './generated/ssdk/index.js';

const tracer = new Tracer();
const logger = new Logger();
const metrics = new Metrics();

const serviceHandler = getMyApiServiceHandler(Service);

export const lambdaHandler = async (
  event: APIGatewayProxyEvent,
): Promise<APIGatewayProxyResult> => {
  const httpRequest = convertEvent(event);
  const db = await getDb();
  const httpResponse = await serviceHandler.handle(httpRequest, {
    tracer,
    logger,
    metrics,
    db,
  });
  return convertVersion1Response(httpResponse);
};
"
`;

exports[`ts#rdb smithy-connection generator > should inject into context.ts, handler.ts, and local-server.ts 3`] = `
"import { getPrisma as getDb } from 'db';
import { IncomingMessage, ServerResponse, createServer } from 'http';
import { convertRequest, writeResponse } from '@aws-smithy/server-node';
import { Tracer } from '@aws-lambda-powertools/tracer';
import { Logger } from '@aws-lambda-powertools/logger';
import { Metrics } from '@aws-lambda-powertools/metrics';
import { Service } from './service.js';
import { getMyApiServiceHandler } from './generated/ssdk/index.js';

const tracer = new Tracer();
const logger = new Logger();
const metrics = new Metrics();

const serviceHandler = getMyApiServiceHandler(Service);

const server = createServer(async function (
  req: IncomingMessage,
  res: ServerResponse<IncomingMessage> & { req: IncomingMessage },
) {
  const httpRequest = convertRequest(req);
  const db = await getDb();
  const httpResponse = await serviceHandler.handle(httpRequest, {
    tracer,
    logger,
    metrics,
    db,
  });
  return writeResponse(httpResponse, res);
});

server.listen(3000);
"
`;

exports[`ts#rdb smithy-connection generator > should support multiple rdb connections 1`] = `
"import { getPrisma as getMysqlDb } from 'mysql-db';
import { getPrisma as getPostgresDb } from 'postgres-db';
import { Logger } from '@aws-lambda-powertools/logger';
import { Metrics } from '@aws-lambda-powertools/metrics';
import { Tracer } from '@aws-lambda-powertools/tracer';

export interface ServiceContext {
  tracer: Tracer;
  logger: Logger;
  metrics: Metrics;
  postgresDb: Awaited<ReturnType<typeof getPostgresDb>>;
  mysqlDb: Awaited<ReturnType<typeof getMysqlDb>>;
}
"
`;

exports[`ts#rdb smithy-connection generator > should support multiple rdb connections 2`] = `
"import { getPrisma as getMysqlDb } from 'mysql-db';
import { getPrisma as getPostgresDb } from 'postgres-db';
import {
  convertEvent,
  convertVersion1Response,
} from '@aws-smithy/server-apigateway';
import type { APIGatewayProxyEvent, APIGatewayProxyResult } from 'aws-lambda';
import { Tracer } from '@aws-lambda-powertools/tracer';
import { Logger } from '@aws-lambda-powertools/logger';
import { Metrics } from '@aws-lambda-powertools/metrics';
import { Service } from './service.js';
import { getMyApiServiceHandler } from './generated/ssdk/index.js';

const tracer = new Tracer();
const logger = new Logger();
const metrics = new Metrics();

const serviceHandler = getMyApiServiceHandler(Service);

export const lambdaHandler = async (
  event: APIGatewayProxyEvent,
): Promise<APIGatewayProxyResult> => {
  const httpRequest = convertEvent(event);
  const postgresDb = await getPostgresDb();
  const mysqlDb = await getMysqlDb();
  const httpResponse = await serviceHandler.handle(httpRequest, {
    tracer,
    logger,
    metrics,
    postgresDb,
    mysqlDb,
  });
  return convertVersion1Response(httpResponse);
};
"
`;

exports[`ts#rdb smithy-connection generator > should support multiple rdb connections 3`] = `
"import { getPrisma as getMysqlDb } from 'mysql-db';
import { getPrisma as getPostgresDb } from 'postgres-db';
import { IncomingMessage, ServerResponse, createServer } from 'http';
import { convertRequest, writeResponse } from '@aws-smithy/server-node';
import { Tracer } from '@aws-lambda-powertools/tracer';
import { Logger } from '@aws-lambda-powertools/logger';
import { Metrics } from '@aws-lambda-powertools/metrics';
import { Service } from './service.js';
import { getMyApiServiceHandler } from './generated/ssdk/index.js';

const tracer = new Tracer();
const logger = new Logger();
const metrics = new Metrics();

const serviceHandler = getMyApiServiceHandler(Service);

const server = createServer(async function (
  req: IncomingMessage,
  res: ServerResponse<IncomingMessage> & { req: IncomingMessage },
) {
  const httpRequest = convertRequest(req);
  const postgresDb = await getPostgresDb();
  const mysqlDb = await getMysqlDb();
  const httpResponse = await serviceHandler.handle(httpRequest, {
    tracer,
    logger,
    metrics,
    postgresDb,
    mysqlDb,
  });
  return writeResponse(httpResponse, res);
});

server.listen(3000);
"
`;
